# vision-default-prior-override

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tutorial.ipynb
scripts/: run_extract_attention_weights.py  run_inference.py  run_knockout_attn_heads.py  run_knockout_mlp.py  run_patching_last_token_attn_heads.py  run_patching_last_token_mlp.py  run_patching_last_token_res_stream.py
scripts/analysis/: _attention_common.py  _patching_common.py  attention_patterns.py  classify_attn_heads.py  classify_mlp_layers.py  difference_logit_lens.py  inference.py  knockout_attn_heads.py  knockout_mlp.py  patching_last_token.py
scripts/paper_figures/: _common.py  fig1_res_stream.py  fig2_head_classification.py  fig3_knockout.py  fig4_attention_routing.py  fig_app_attention_routing.py  fig_app_head_classification_all.py  fig_app_logit_lens.py  fig_app_mlp_restoration.py  fig_app_res_stream_all.py  fig_app_res_stream_visual_circuit.py
src/vdpo/: interventions.py  settings.py
src/vdpo/runner/: core.py  extract_attention_weights.py  inference.py  knockout_attn_heads.py  knockout_mlp.py  patching_last_token_attn_heads.py  patching_last_token_mlp.py  patching_last_token_res_stream.py
src/vdpo/types/: contrast.py  core.py  enums.py  models.py
src/vdpo/utils/: inflect_engine.py  knockout_targets.py  load_examples.py  load_model.py  logger.py
src/vdpo/vlm/: __init__.py  base.py  llava_next.py  paligemma_2.py  qwen.py
tests/: test_contrast.py  test_interventions.py  test_patching_common.py
