[project]
name = "vision-default-prior-override"
version = "0.1.0"
description = "Causal analysis of perception-knowledge conflict resolution in vision-language models"
requires-python = ">=3.12"
dependencies = [
    "bitsandbytes>=0.49.1",
    "datasets>=4.4.2",
    "hf-transfer>=0.1.9",
    "inflect>=7.5.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "markdown>=3.10.2",
    "matplotlib>=3.10.8",
    "nnsight>=0.5.14",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pandas-stubs~=3.0.0",
    "pillow>=12.1.0",
    "pre-commit>=4.5.1",
    "protobuf>=6.33.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.9.1",
    "pymupdf4llm>=1.27.2.2",
    "python-dotenv>=1.2.1",
    "qwen-vl-utils>=0.0.14",
    "scikit-learn>=1.5.0",
    "scipy-stubs>=1.17.1.1",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "tenacity>=9.1.2",
    "tensordict>=0.10.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "tueplots>=0.2.1",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
